frontend/test/should_fail/array_model_002.gm
node class A
{
	val:int;
	niceArray:array<string> = {
		"foo",
		"bar"
	};
	spiceArray:array<int> = {
		42
	};
}

edge class E
{
	val:int;
	niceArray:array<string> = {
		"foo",
		"bar"
	};
	spiceArray:array<int> = {
		42
	};
}